# bazel-21814

./: .bazelrc  MODULE.bazel  README.md  WORKSPACE.bzlmod  maven_install.json  renovate.sh
.aspect/cli/: config.yaml
example/: BUILD.bazel  CheckSum.java
